--- a/index.html
+++ b/index.html
@@ -301,15 +301,32 @@
         <section>  <!-- 5° SECTION -->
             <div class="container">
                 <div class="row debug">
-                    <div class="col debug debug-col">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis optio architecto dicta adipisci neque unde aliquam corporis illum error, quasi iure harum necessitatibus, quisquam est, eligendi nemo ad suscipit fugit?
+                    <div class="col">
+                        <h1>
+                            About us
+                        </h1>
+                        <div class="text">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id corrupti provident et dolores dolorum cupiditate pariatur, fuga placeat quidem ut nostrum facere veritatis soluta ipsa? Quis sint ad alias ut dolorum, quam exercitationem, asperiores placeat animi itaque obcaecati nam eum tempora voluptatum saepe, in temporibus! Saepe repellat quod similique laborum.
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id corrupti provident et dolores dolorum cupiditate pariatur, fuga placeat quidem ut nostrum facere veritatis soluta ipsa? Quis sint ad alias ut dolorum, quam exercitationem, asperiores placeat animi itaque obcaecati nam eum tempora voluptatum saepe, in temporibus! Saepe repellat quod similique laborum.
+                            </p>
+                        </div>
                     </div>
                 </div>
                 
                 <div class="row debug">
-                    <div class="col debug debug-col-circle"></div>
-                    <div class="col debug debug-col">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis maxime sed aliquam excepturi, nesciunt numquam veritatis quod ex tempora, rem reiciendis vero accusantium rerum similique, autem ut. Est, at vel.
+                    <div class="col">
+                        <img src="img/about.jpg" alt="">
+                    </div>
+                    <div class="col">
+                        <h1>
+                            I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.
+                        </h1>
+                        <div class="link">
+                            <a href="#"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a>
+                        </div>
                     </div>
                 </div>
             </div>
