--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         </section>
         <section>  <!-- 5° SECTION -->
             <div class="container">
-                <div class="row debug">
+                <div class="row">
                     <div class="col">
                         <h1>
                             About us
@@ -316,7 +316,7 @@
                     </div>
                 </div>
                 
-                <div class="row debug">
+                <div class="row">
                     <div class="col">
                         <img src="img/about.jpg" alt="">
                     </div>
@@ -334,8 +334,25 @@
         <section>  <!-- 6° SECTION -->
             <div class="container">
                 <div class="row">
-                    <div class="col debug debug-col">
-                    1    
+                    <div class="col">
+                        <span>
+                            GET STARTED
+                        </span>  
+                        <span>
+                            Simple, Transparent Pricing
+                        </span>
+                        <span>
+                            It's Free!
+                        </span>
+                        <span>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, labore!
+                        </span>
+                        <div class="link">
+                            <a href="#">Get Started</a>
+                        </div>
+                        <span>
+                            Copyrigth 2021 Boolean
+                        </span>
                     </div>
                 </div>
             </div>
