--- a/index.html
+++ b/index.html
@@ -363,7 +363,12 @@
         <div class="container">
             <div class="row">
                 <div class="col debug debug-small-col">
-                    1
+                    <span>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, cumque?
+                    </span>
+                    <span>
+                        <a href="#">Lorem ipsum </a>dolor sit amet consectetur adipisicing elit. <a href="#">Boolean careers</a>
+                    </span>
                 </div>
             </div>
         </div>
