[Edit] 2°section text

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
                             App Developement 
                          </h2>
                          <p>
-                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio iusto distinctio rerum dolore aut, itaque nisi rem dolorum voluptas reprehenderit?
+                             <em>
+                                Develop an on-demand app for your delivery buisness to reach your targeted customers without any interruption.
+                             </em>
                          </p>
                          <div class="link">
                             <a href="#"><i class="fa-solid fa-arrow-down"></i></a>
