[Edit] 3° section text

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <section>  <!-- 3° SECTION -->
             <div class="container">
                 <div class="row">
-                    <div class="col debug debug-col">
+                    <div class="col">
                         <span>
                             TESTIMONIALS
                         </span>
@@ -138,18 +138,18 @@
                             We are committed expert partners
                         </h1>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto alias aliquid voluptas commodi adipisci. Delectus beatae distinctio deserunt repudiandae magnam?
+                            We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.
                         </p>
                     </div>
                 </div>
-                <div class="row border-radius debug flex direction">
+                <div class="row border-radius flex direction">
                     <div class="card">
                         <div class="col">
                             <img src="img/testimonial1.jpg" alt="">
                         </div>
                         <div class="col">
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus repellendus amet dolorum iure fuga quasi? Exercitationem molestias beatae pariatur accusantium.
+                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh pulvinar proin.
                             </p>
                             <span>
                                 NAT REYNOLDS
@@ -157,14 +157,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="row border-radius debug flex direction">
+                <div class="row border-radius flex direction">
                     <div class="card">
                         <div class="col">
                             <img src="img/testimonial2.jpg" alt="">
                         </div>
                         <div class="col">
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus repellendus amet dolorum iure fuga quasi? Exercitationem molestias beatae pariatur accusantium.
+                                Pharetra vel turpis nunc eget lorem. Quisque id diam vel quam elementum pulvinar etiam. Urna porttitor rhoncus dolor purus non enim praesent elementum.
                             </p>
                             <span>
                                 CECILIA ALMENDA
@@ -172,14 +172,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="row border-radius debug flex direction">
+                <div class="row border-radius flex direction">
                     <div class="card">
                         <div class="col">
                             <img src="img/testimonial3.jpg" alt="">
                         </div>
                         <div class="col">
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus repellendus amet dolorum iure fuga quasi? Exercitationem molestias beatae pariatur accusantium.
+                                Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin. Nibh nisl condimentum id venenatis a condimentum.
                             </p>
                             <span>
                                 BOB ROBERTS
