[Edit] 4° section text

--- a/index.html
+++ b/index.html
@@ -193,24 +193,23 @@
         <section>  <!-- 4° SECTION -->
             <div class="container">
                 <div class="row border-radius">
-                    <div class="col debug debug-small-col">
+                    <div class="col">
                         <h1>
                             Benefits of working with us
                         </h1>
                     </div>
                 </div>
                 <div class="cards">
-
                     <div class="row card border-radius">
                         <div class="col">
-                            <h1>
+                            <h2>
                                 01
-                            </h1>
+                            </h2>
                             <h2>
                                 Hight Quality
                             </h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem! Soluta quas adipisci consequuntur explicabo a doloribus quaerat dolore. Sit.
+                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
                             </p>
                             <div class="link">
                                 <a href="#">more</a>
@@ -219,14 +218,14 @@
                     </div>
                     <div class="row card border-radius">
                         <div class="col">
-                            <h1>
+                            <h2>
                                 02
-                            </h1>
+                            </h2>
                             <h2>
                                 Creative Team
                             </h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem! Soluta quas adipisci consequuntur explicabo a doloribus quaerat dolore. Sit.
+                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
                             </p>
                             <div class="link">
                                 <a href="#">more</a>
@@ -235,14 +234,14 @@
                     </div>
                     <div class="row card border-radius">
                         <div class="col">
-                            <h1>
-                                03
-                            </h1>
                             <h2>
-                                Amaziong Results
+                                03
+                            </h2>
+                            <h2>
+                                Amazing Result
                             </h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem! Soluta quas adipisci consequuntur explicabo a doloribus quaerat dolore. Sit.
+                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
                             </p>
                             <div class="link">
                                 <a href="#">more</a>
@@ -251,14 +250,14 @@
                     </div>
                     <div class="row card border-radius">
                         <div class="col">
-                            <h1>
+                            <h2>
                                 04
-                            </h1>
+                            </h2>
                             <h2>
                                 Best Pricing
                             </h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem! Soluta quas adipisci consequuntur explicabo a doloribus quaerat dolore. Sit.
+                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
                             </p>
                             <div class="link">
                                 <a href="#">more</a>
@@ -267,14 +266,14 @@
                     </div>
                     <div class="row card border-radius">
                         <div class="col">
-                            <h1>
-                                05
-                            </h1>
                             <h2>
-                                Innovations
+                                05
+                            </h2>
+                            <h2>
+                                Innovation
                             </h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem! Soluta quas adipisci consequuntur explicabo a doloribus quaerat dolore. Sit.
+                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
                             </p>
                             <div class="link">
                                 <a href="#">more</a>
@@ -283,14 +282,14 @@
                     </div>
                     <div class="row card border-radius">
                         <div class="col">
-                            <h1>
+                            <h2>
                                 06
-                            </h1>
+                            </h2>
                             <h2>
                                 24/7 Support
                             </h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem! Soluta quas adipisci consequuntur explicabo a doloribus quaerat dolore. Sit.
+                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
                             </p>
                             <div class="link">
                                 <a href="#">more</a>
