[Edit] 5 ° section text

--- a/index.html
+++ b/index.html
@@ -308,10 +308,10 @@
                         </h1>
                         <div class="text">
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id corrupti provident et dolores dolorum cupiditate pariatur, fuga placeat quidem ut nostrum facere veritatis soluta ipsa? Quis sint ad alias ut dolorum, quam exercitationem, asperiores placeat animi itaque obcaecati nam eum tempora voluptatum saepe, in temporibus! Saepe repellat quod similique laborum.
+                                Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Egestas tellus rutrum tellus pellentesque eu tincidunt. Neque vitae tempus quam pellentesque nec. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Interdum velit euismod in pellentesque massa placerat duis.
                             </p>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id corrupti provident et dolores dolorum cupiditate pariatur, fuga placeat quidem ut nostrum facere veritatis soluta ipsa? Quis sint ad alias ut dolorum, quam exercitationem, asperiores placeat animi itaque obcaecati nam eum tempora voluptatum saepe, in temporibus! Saepe repellat quod similique laborum.
+                                Quis viverra nibh cras pulvinar matis. Ornare arcu dui vivamus arcu felis bibendum ut tristique. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit massa enim.
                             </p>
                         </div>
                     </div>
