[Edit] footer text

--- a/index.html
+++ b/index.html
@@ -363,10 +363,10 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col debug debug-small-col">
-                    <span>
+                <div class="col">
+                    <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, cumque?
-                    </span>
+                    </p>
                     <span>
                         <a href="#">Lorem ipsum </a>dolor sit amet consectetur adipisicing elit. <a href="#">Boolean careers</a>
                     </span>
