--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main>
         <section>  <!-- 1° SECTION -->
-            <div class="container direction">
+            <div class="container flex direction">
                 <div class="row card border-radius">
                     <div class="col">
                         <h3>
