[Edit] topbar/ link

--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
                     </div>
                     <div class="col">
                         <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+                        <div class="menu">
+                            <ul class="flex">
+                                <li><a href="http://">Planning</a></li>
+                                <li><a href="http://">Testimonials</a></li>
+                                <li><a href="http://">Features</a></li>
+                                <li><a href="http://">About Us</a></li>
+                            </ul>
+                            <div class="link">
+                                <a href="http://">Get Started</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
